Enable native access globally in sbt